package ar.edu.utn.frba.dds.dominio;

public enum Origen {
  CARGAMANUAL,
  DATASET,
  CONTRIBUYENTE,
  SERVICIOEXTERNO
}