@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam monochrome true
title Diagrama de Clases - Sistema MetaMapa (Implementación)

package "Dominio" {
  class Hecho {
    - id: long
    - titulo: String
    - descripcion: String
    - categoria: String
    - latitud: Double
    - longitud: Double
    - fechaAcontecimiento: LocalDateTime
    - fechaCarga: LocalDateTime
    - fechaModificacion: LocalDate
    - origen: Origen
    - visible: boolean
    - consensuado: boolean
    - provincia: String
    - solicitudes: List<SolicitudEliminacion>
    + agregarSolicitud(s: SolicitudEliminacion)
    + cumpleCon(f: Filtro): boolean
    + esElMismo(h: Hecho): boolean
    + tieneMismoTitulo(h: Hecho): boolean
  }

  class HechoDinamico {
    - contribuyente: Contribuyente
    + estaDentroDePlazo(): boolean
  }

  enum Origen {
    CARGAMANUAL
    DATASET
    CONTRIBUYENTE
    SERVICIOEXTERNO
  }

  class Coleccion {
    - id: Long
    - titulo: String
    - descripcion: String
    - handle: String
    - fuente: Fuente
    - criterioPertenencia: Filtro
    - algoritmoConsenso: AlgoritmoConsenso
    - modoNavegacion: ModoNavegacion
    + mostrarHechos(): List<Hecho>
    + hechosFiltrados(f: Filtro): List<Hecho>
    + ejecutarAlgoritmo(hechos: List<Hecho>)
    + hechoPertenece(h: Hecho): boolean
  }

  enum ModoNavegacion {
    IRRESTRICTA
    CURADA
  }

  class Contribuyente {
    - id: Long
    - edad: Integer
    - nombre: String
    - apellido: String
  }
}

package "Solicitudes" {
  abstract class Solicitud {
    - id: Long
    - textoFundamentacion: String
    - estado: EstadoSolicitud
    - hecho: Hecho
    + aceptar()
    + rechazar()
    + aplicarAceptacion()
    + aplicarRechazo()
  }

  class SolicitudEliminacion {
    + aplicarAceptacion()
    + aplicarRechazo()
  }

  class SolicitudModificacion {
    - hechoModificado: Hecho
    + aplicarAceptacion()
    + aplicarRechazo()
  }

  class SolicitudSubida {
    - sugerenciaModificacion: String
    + aplicarAceptacion()
    + aplicarRechazo()
  }

  enum EstadoSolicitud {
    PENDIENTE
    ACEPTADA
    RECHAZADA
  }
}

package "Fuentes" {
  abstract class Fuente {
    - id: Long
    + cargarHechos(p: ParametrosConsulta): ArrayList<Hecho>
    + getFuente(): List<Fuente>
  }

  class FuenteDinamica {
    - hechosDinamicos: ArrayList<HechoDinamico>
    + subirHecho(h: HechoDinamico)
    + eliminarHecho(h: HechoDinamico)
    + solicitarModificarHecho(original: HechoDinamico, nuevo: HechoDinamico, texto: String)
    + puedeModificar(h: HechoDinamico, c: Contribuyente): boolean
  }

  class FuenteEstatica {
    - pathArchivo: String
    - categoria: String
    - campos: ArrayList<String>
  }

  class ServicioAgregacion {
    - fuentesQueConsidera: List<Fuente>
    - cacheDeHechos: ArrayList<Hecho>
    + actualizarCache()
    + cargarHechos(p: ParametrosConsulta)
  }

  abstract class FuenteProxy {
  }

  class FuenteDemo {
    - cliente: ClienteDemo
    - direccionApi: String
    - ultimaConsulta: LocalDateTime
    - cacheHechos: List<Hecho>
    + cargarHechos(p: ParametrosConsulta)
    + forzarExpiracionCache()
  }

  class FuenteMetaMapa {
    - cliente: ClienteMetaMapa
    - urlBase: String
    + cargarHechos(p: ParametrosConsulta)
    + enviarSolicitudEliminacion(url: String, s: SolicitudEliminacion)
  }
}

package "Consenso" {
  abstract class AlgoritmoConsenso {
    - id: Long
    + tieneConsenso(h: Hecho, fuentes: List<Fuente>)
  }

  class ConsensoDefault
  class ConsensoAbsoluto
  class ConsensoMayoriaSimple
  class ConsensoMultiplesMenciones
}

package "Filtros" {
  abstract class Filtro {
    - id: Long
    + cumple(h: Hecho): boolean
  }

  class FiltroCategoria {
    - categoria: String
  }

  class FiltroFecha {
    - fechaBuscada: LocalDate
  }

  class FiltroUbicacion {
    - latitudMin: double
    - latitudMax: double
    - longitudMin: double
    - longitudMax: double
  }
}

package "Clientes externos" {
  class ClienteDemo {
    - adaptador: AdaptadorHechoDemo
    + siguienteHecho(url: String, fecha: DateTime): Map
    + traerHechos(url: String): List<Hecho>
  }

  class ClienteMetaMapa {
    - adaptador: AdaptadorHechoMetaMapa
    + obtenerHechos(url: String, p: ParametrosConsulta): List<Hecho>
    + enviarSolicitudEliminacion(url: String, s: SolicitudEliminacion)
  }
}

package "Servicios externos" {
  interface DetectorDeSpam {
    + esSpam(texto: String): boolean
  }

  class ImplementadorSpam {
    - idSpam: Integer
    + esSpam(texto: String): boolean
  }

  class GeorefAPI {
    + getProvincia(lat: double, lon: double): String
  }

  class ExportadorCSV {
    + exportarVistaACSV(vista: String, archivo: String)
  }
}

package "Repositorios" {
  class RepositorioHechos {
    + guardar(h: Hecho)
    + actualizar(h: Hecho)
    + eliminar(id: Long)
    + buscarPorTextoEnDB(query: String): List<Hecho>
    + buscarPorSimilitud(query: String): List<Hecho>
  }

  class RepositorioColecciones {
    + guardar(c: Coleccion)
    + buscarPorID(id: Long): Coleccion
    + listarTodas(): List<Coleccion>
    + eliminar(id: Long)
    + actualizar(c: Coleccion)
  }

  class RepositorioSolicitudes {
    + obtenerTodas(): List<Solicitud>
    + guardar(s: Solicitud)
    + eliminar(id: Long)
    + actualizar(s: Solicitud)
  }

  class RepositorioEstadisticas {
    + provinciaConMasHechos(c: Coleccion): String
    + obtenerCategoriaMasReportada(): EstadisticaCategoriaTop
    + obtenerProvinciaPorCategoria(categoria: String): EstadisticaProvinciaPorCategoriaTop
    + obtenerHoraPorCategoria(categoria: String): EstadisticaHoraPorCategoriaTop
    + obtenerCantidadSpam(): EstadisticaSolicitudesSpam
  }
}

package "Estadísticas" {
  class EstadisticaCategoriaTop {
    - id: Long
    - categoria: String
    - cantidad: Long
  }

  class EstadisticaHoraPorCategoriaTop {
    - id: Long
    - categoria: String
    - hora: Integer
    - cantidad: Long
  }

  class EstadisticaProvinciaPorCategoriaTop {
    - id: Long
    - provincia: String
    - categoria: String
    - cantidad: Long
  }

  class EstadisticaSolicitudesSpam {
    - id: Long
    - cantidad: int
    - porcentaje: String
  }
}

' --- Relaciones principales ---
Hecho <|-- HechoDinamico
Hecho "1" o-- "*" SolicitudEliminacion
HechoDinamico --> Contribuyente
Coleccion --> Fuente
Coleccion --> Filtro
Coleccion --> AlgoritmoConsenso
Coleccion --> ModoNavegacion
Solicitud <|-- SolicitudEliminacion
Solicitud <|-- SolicitudModificacion
Solicitud <|-- SolicitudSubida
Solicitud --> Hecho
Filtro <|-- FiltroCategoria
Filtro <|-- FiltroFecha
Filtro <|-- FiltroUbicacion
Fuente <|-- FuenteDinamica
Fuente <|-- FuenteEstatica
Fuente <|-- ServicioAgregacion
FuenteProxy <|-- FuenteDemo
FuenteProxy <|-- FuenteMetaMapa
AlgoritmoConsenso <|-- ConsensoDefault
AlgoritmoConsenso <|-- ConsensoAbsoluto
AlgoritmoConsenso <|-- ConsensoMayoriaSimple
AlgoritmoConsenso <|-- ConsensoMultiplesMenciones
FuenteDemo --> ClienteDemo
FuenteMetaMapa --> ClienteMetaMapa
Solicitud --> EstadoSolicitud
Hecho --> Origen
Solicitud --> DetectorDeSpam
SolicitudModificacion --> Hecho
SolicitudEliminacion --> EstadoSolicitud
RepositorioHechos --> Hecho
RepositorioColecciones --> Coleccion
RepositorioSolicitudes --> Solicitud
RepositorioEstadisticas --> Hecho
RepositorioEstadisticas --> Coleccion

@enduml